[package]
name = "hummingbird-daemon"
description = """
Launcher to daemonize AirVPN's Hummingbird OpenVPN client
"""
version = "0.1.0"
authors = ["Ignacio Lago <ignacio@ignaciolago.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/ignlg/hummingbird-daemon"
repository = "https://github.com/ignlg/hummingbird-daemon"
keywords = ["launcher", "daemon", "openvpn", "vpn"]

[dependencies]
structopt = "0.3"
ctrlc = "3.1"
pipeliner = "1.0"
rand = "0.7"
nix = "0.17"

[profile.release]
debug = false
lto = true
